Port fluid/registration/util/data/recipe/client/leaf packages (parallel agents)
Six parallel porting agents migrated the bulk of Mantle to NeoForge 1.21.1:
fluid (BaseFlowingFluid, fluid caps, FluidStack components, transfer payloads),
registration+util (adapters onto vanilla Registry, OffhandCooldownTracker ->
data attachment, CombatHelper MobType removal), data (MobTypePredicate -> entity
tags, codec migrations, CUSTOM_DATA components), recipe (MapCodec/StreamCodec
serializers, ICustomIngredient, codec conditions), client (GUI layer events,
GuiGraphics, model loaders), and the leaf packages (datagen/block/item/inventory/
command/loot/config). Mantle errors 1513 -> 43 (9 in root Mantle.java cross-package
wiring, 34 in plugin/JEI which is intentionally dep-disabled).